# clipstash

./: Cargo.toml
src/lib/: mod.rs
src/lib/data/: mod.rs  model.rs
src/lib/domain/: time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: clip_id.rs  content.rs  expires.rs  hits.rs  password.rs  posted.rs  shortcode.rs  title.rs
