[package]
name = "clipstash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
chrono = { version = "0.4.31" , features = ["serde"] }
uuid = { version = "1.4.1" , features = ["serde", "v4"] }
derive_more = "0.99.17"
rand = "0.8.5"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }